# DeepCGH

./: .gitignore  README.md  demo_deepcgh.py  demo_deepdcgh.py  pyproject.toml
src/: deepcgh.py  demo_deepcgh.py  demo_deepdcgh.py
